fix settings-table spacing

--- a/app/assets/stylesheets/zammad.css.scss
+++ b/app/assets/stylesheets/zammad.css.scss
@@ -5780,7 +5780,7 @@ output {
 }
 
 .form-group.day-time {
-  padding-bottom: 4px;
+  padding: 5px 5px 4px;
   
   label {
     text-align: center; 
@@ -5821,7 +5821,7 @@ output {
   
   
   th, td {
-    padding: 5px;
+    padding: 10px;
     border: 1px solid hsl(198,18%,86%);
   }
   
@@ -5829,8 +5829,6 @@ output {
     font-weight: normal;
     text-transform: uppercase;
     font-size: 12px;
-    padding-top: 8px;
-    padding-bottom: 8px;
     letter-spacing: 1px;
     background: hsl(197,20%,93%);
     border-bottom: none;
@@ -5875,22 +5873,24 @@ output {
   p {
     margin: 0;
   }
-}
 
-.settings-list-action-cell {
-  @extend .u-clickable;
-  text-align: center;
-  background: hsl(197,22%,96%);
-  
-  &:hover {
-    .icon {
-      fill: hsl(60,1%,34%);
+  .settings-list-action-cell {
+    @extend .u-clickable;
+    text-align: center;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    background: hsl(197,22%,96%);
+    
+    &:hover {
+      .icon {
+        fill: hsl(60,1%,34%);
+      }
     }
-  }
-  
-  .icon {
-    fill: hsl(198,19%,72%);
-    vertical-align: top;
+    
+    .icon {
+      fill: hsl(198,19%,72%);
+      vertical-align: top;
+    }
   }
 }
 
